add GetServiceVersionYaml func and change version param to revision
