# pkg/microservice/aslan/server/rest/doc/swagger.json
@@ -981,15 +981,15 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version a",
-                        "name": "versionA",
+                        "description": "revision a",
+                        "name": "revisionA",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "version b",
-                        "name": "versionB",
+                        "description": "revision b",
+                        "name": "revisionB",
                         "in": "query",
                         "required": true
                     }
@@ -1097,8 +1097,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version",
-                        "name": "version",
+                        "description": "revision",
+                        "name": "revision",
                         "in": "query",
                         "required": true
                     }
@@ -2093,15 +2093,15 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version a",
-                        "name": "versionA",
+                        "description": "revision a",
+                        "name": "revisionA",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "version b",
-                        "name": "versionB",
+                        "description": "revision b",
+                        "name": "revisionB",
                         "in": "query",
                         "required": true
                     }
@@ -2209,8 +2209,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version",
-                        "name": "version",
+                        "description": "revision",
+                        "name": "revision",
                         "in": "query",
                         "required": true
                     }
@@ -2994,15 +2994,15 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version a",
-                        "name": "versionA",
+                        "description": "revision a",
+                        "name": "revisionA",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "version b",
-                        "name": "versionB",
+                        "description": "revision b",
+                        "name": "revisionB",
                         "in": "query",
                         "required": true
                     }
@@ -3017,9 +3017,55 @@
                 }
             }
         },
+        "/api/aslan/service/production/version/{serviceName}/revision/{revision}": {
+            "get": {
+                "description": "Get Production Service Versions Yaml",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get Production Service Version Yaml",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "service name",
+                        "name": "serviceName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "project name",
+                        "name": "projectName",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "revision",
+                        "name": "revision",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.GetServiceVersionYamlResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/aslan/service/production/version/{serviceName}/rollback": {
             "post": {
-                "description": "Rollback Service Version",
+                "description": "Rollback Production SService Version",
                 "consumes": [
                     "application/json"
                 ],
@@ -3047,8 +3093,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version",
-                        "name": "version",
+                        "description": "revision",
+                        "name": "revision",
                         "in": "query",
                         "required": true
                     }
@@ -3353,15 +3399,15 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version a",
-                        "name": "versionA",
+                        "description": "revision a",
+                        "name": "revisionA",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "version b",
-                        "name": "versionB",
+                        "description": "revision b",
+                        "name": "revisionB",
                         "in": "query",
                         "required": true
                     }
@@ -3371,6 +3417,52 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/service.ListServiceVersionsResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/aslan/service/version/{serviceName}/revision/{revision}": {
+            "get": {
+                "description": "Get Service Versions Yaml",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get Service Version Yaml",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "service name",
+                        "name": "serviceName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "project name",
+                        "name": "projectName",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "revision",
+                        "name": "revision",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.GetServiceVersionYamlResponse"
                         }
                     }
                 }
@@ -3406,8 +3498,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "version",
-                        "name": "version",
+                        "description": "revision",
+                        "name": "revision",
                         "in": "query",
                         "required": true
                     }
@@ -6059,6 +6151,20 @@
                     "type": "string"
                 },
                 "values": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.GetServiceVersionYamlResponse": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "type": "string"
+                },
+                "variable_yaml": {
+                    "type": "string"
+                },
+                "yaml": {
                     "type": "string"
                 }
             }
